# rust_diff

./: Cargo.toml  README.md
doc/colored/: index.html
doc/diff/: enum.DiffItem.html  fn.diff.html  fn.patch.html  sidebar-items.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/str/: trait.FromStr.js
doc/src/colored/: lib.rs.html
doc/src/diff/: libdiff.rs.html
docs/: index.html  search-index.js
docs/colored/: enum.Color.html  struct.ColoredString.html  trait.Colorize.html
docs/colored/control/: fn.set_override.html  fn.unset_override.html  index.html  struct.ShouldColorize.html
docs/diff/: enum.DiffItem.html  fn.patch.html  fn.pretty_print.html  index.html  sidebar-items.js
docs/diff/diffitem/: enum.DiffItem.html
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/ops/: trait.Deref.js
docs/src/colored/: color.rs.html  control.rs.html  style.rs.html
docs/src/diff/: diffhelpers.rs.html  diffitem.rs.html  libdiff.rs.html  longest_common_subseq.rs.html
docs/src/lazy_static/: lazy.rs.html  lib.rs.html
src/: diffhelpers.rs  diffitem.rs  libdiff.rs  longest_common_subseq.rs
