[package]
name = "rust_diff"
version = "0.1.0"
authors = ["Michael Donovan <michaeldonovan@u.northwestern.edu>", "Alan Wojciechowski <alanwojciechowski2017@u.northwestern.edu>"]

[lib]
name = "libdiff"
path = "src/libdiff.rs"

[[bin]]
name = "diff"
path = "src/bin/diff.rs"

[dependencies]
colored = "1.5.1"
